Correctif pour l'accèssibilité avec les contrastes

--- a/assets/style.css
+++ b/assets/style.css
@@ -265,7 +265,7 @@ input[type="submit"] {
 }
 
 footer {
-  background-color: #BEB45A;
+  background-color: #5f5826;
   color: #fff;
   width: 100%;
   display: flex;
